# error-analysis-service

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  compose.yaml  pyproject.toml  start.ps1
app/: main.py
app/api/: error_analyze.py  experiment_analyze.py  health.py  learning_suggest.py  warning_analyze.py
app/core/: config.py  responses.py
app/schemas/: requests.py
app/services/: deepseek_client.py  error_analyzer.py  experiment_analyzer.py  learning_advisor.py  warning_detector.py
tests/: test_error_analyzer.py  test_experiment_analyzer.py  test_learning_advisor.py  test_warning_detector.py
